--- a/application.yml
+++ b/application.yml
@@ -51,7 +51,7 @@ spring:
   datasource:
     schema: classpath*:db/mysql/schema.sql
     data: classpath*:db/mysql/data.sql
-    url: jdbc:mysql://localhost:3306/petclinic?useSSL=false
-    username: petclinic
+    url: jdbc:mysql://mysql-db:3306/petclinic?useSSL=false
+    username: root
     password: petclinic
     initialization-mode: ALWAYS
