--- a/application.yml
+++ b/application.yml
@@ -4,7 +4,6 @@
 server.port: 0
 
 # embedded database init, supports mysql too trough the 'mysql' spring profile
-petclinic.database: hsqldb
 spring:
   datasource:
     schema: classpath*:db/hsqldb/schema.sql
@@ -46,8 +45,11 @@ management:
         enabled: true
 
 ---
+
 spring:
-  profiles: mysql
+  profiles:
+  - mysql
+  - docker
   datasource:
     schema: classpath*:db/mysql/schema.sql
     data: classpath*:db/mysql/data.sql
