--- a/customers-service.yml
+++ b/customers-service.yml
@@ -2,7 +2,7 @@
   profiles: default
 eureka:
   instance:
-    hostname: ${HOST_NAME}
+    hostname: ${HOST_NAME}:${random.uuid}
     # enable to register multiple app instances with a random server port
 #    instance-id: ${spring.application.name}:${random.uuid}
 
