--- a/customers-service.yml
+++ b/customers-service.yml
@@ -2,9 +2,9 @@
   profiles: default
 eureka:
   instance:
-    hostname: ${HOSTNAME}:${random.uuid}
+    hostname: ${HOSTNAME}
     # enable to register multiple app instances with a random server port
-#    instance-id: ${spring.application.name}:${random.uuid}
+    instance-id: ${HOSTNAME}:${spring.application.name}:${random.uuid}
 
 ---
 spring:
