--- a/customers-service.yml
+++ b/customers-service.yml
@@ -16,3 +16,5 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://discovery-server:8761/eureka/
+    instance:
+      hostname: ${HOSTNAME}
