Change to hostname

--- a/customers-service.yml
+++ b/customers-service.yml
@@ -16,5 +16,5 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://discovery-server:8761/eureka/
-    instance:
-      hostname: ${HOSTNAME}
+  instance:
+    hostname: ${HOST_NAME}
