Change to hostname

--- a/customers-service.yml
+++ b/customers-service.yml
@@ -2,6 +2,7 @@
   profiles: default
 eureka:
   instance:
+    hostname: ${HOSTNAME}
     # enable to register multiple app instances with a random server port
     instance-id: ${spring.application.name}:${random.uuid}
 
@@ -16,5 +17,3 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://discovery-server:8761/eureka/
-  instance:
-    hostname: ${HOST_NAME}
