--- a/customers-service.yml
+++ b/customers-service.yml
@@ -3,6 +3,7 @@
 eureka:
   instance:
     hostname: ${HOSTNAME}
+    preferIpAddress: false
     # enable to register multiple app instances with a random server port
     instance-id: ${spring.application.name}:${random.uuid}
 
@@ -17,3 +18,6 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://discovery-server:8761/eureka/
+  instance:
+    hostname: ${HOSTNAME}
+    preferIpAddress: false
