Change to hostname

--- a/customers-service.yml
+++ b/customers-service.yml
@@ -19,4 +19,4 @@ eureka:
     serviceUrl:
       defaultZone: http://discovery-server:8761/eureka/
   instance:
-    hostname: ${HOSTNAME}
+    hostname: ${HOST_NAME}
