--- a/customers-service.yml
+++ b/customers-service.yml
@@ -2,7 +2,7 @@
   profiles: default
 eureka:
   instance:
-    hostname: ${HOST_NAME}
+    hostname: ${HOSTNAME}
     # enable to register multiple app instances with a random server port
     instance-id: ${spring.application.name}:${random.uuid}
 
@@ -18,4 +18,4 @@ eureka:
     serviceUrl:
       defaultZone: http://discovery-server:8761/eureka/
   instance:
-    hostname: ${HOST_NAME}
+    hostname: ${HOSTNAME}
