Change to hostname

--- a/customers-service.yml
+++ b/customers-service.yml
@@ -3,6 +3,7 @@
 eureka:
   instance:
     hostname: ${HOSTNAME}
+    preferIpAddress: false
     # enable to register multiple app instances with a random server port
     instance-id: ${spring.application.name}:${random.uuid}
 
@@ -19,3 +20,4 @@ eureka:
       defaultZone: http://discovery-server:8761/eureka/
   instance:
     hostname: ${HOSTNAME}
+    preferIpAddress: false
