Change to hostname

--- a/vets-service.yml
+++ b/vets-service.yml
@@ -8,6 +8,8 @@ spring:
   profiles: default
 eureka:
   instance:
+    hostname: ${HOSTNAME}
+    preferIpAddress: false
     # enable to register multiple app instances with a random server port
     instance-id: ${spring.application.name}:${random.uuid}
 
@@ -22,3 +24,6 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://discovery-server:8761/eureka/
+  instance:
+    hostname: ${HOSTNAME}
+    preferIpAddress: false
